Many styling fixes on sdk search. Mostly alignment on search results view.

--- a/Interface/resources/sass/sdk/components/_search.scss
+++ b/Interface/resources/sass/sdk/components/_search.scss
@@ -3,7 +3,10 @@
     // the bootstrap styling of pages
     margin-right: -15px;
     margin-left: -15px;
-    background-color: $white;
+
+    > div > section {
+        background-color: $white;
+    }
 
     // Utility class to adjust styling of our custom design
     .with-padding {
@@ -64,8 +67,8 @@
         }
         &::after {
             position: absolute;
-            top: 1px;
-            left: 1px;
+            top: 0px;
+            left: 0px;
 
             display: none;
 
@@ -244,7 +247,7 @@
     }
 
     &__subheader {
-        margin-top: 10px;
+        margin: 10px -15px 0;
     }
 
     // Overwrites of default bootstrap grid, to make columns fit without margins
@@ -346,6 +349,9 @@
 
         padding: 15px 20px;
 
+        margin: 0 -15px;
+        line-height: 20px; // fixes vertical alignment between filter column, and search result column
+
         text-decoration: underline;
 
         border-bottom: 1px solid $gray-border;
@@ -393,6 +399,7 @@
 
     &__footer {
         clear: both;
+        margin: 0 15px;
 
         border-top: 1px solid $gray-border;
     }
