--- a/Interface/resources/sass/sdk/elements/_jumpToPage.scss
+++ b/Interface/resources/sass/sdk/elements/_jumpToPage.scss
@@ -28,8 +28,9 @@
 
         height: 30px;
 
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
+        border: 1px solid $gray-dark;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
 
         &:hover {
             background-color: $gray-dark;
